--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>確率計算</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -32,8 +32,6 @@
     <ul id="drawOut" class="drawOut">
     </ul>
   </div>
-
-
   <script src=" script.js"></script>
 </body>
 
